--- a/Portfolio.html
+++ b/Portfolio.html
@@ -187,14 +187,14 @@
  <div class="navbar">
  	<div class="row">
 	<div class="column">
-		<a href="https://hadaril.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
+		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
 	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Portfolio" style="float: left">Map Portfolio</a>
-  		<a href="https://hadaril.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://hadaril.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://hadaril.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
+  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left">Map Portfolio</a>
+  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
   	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Contact"><b>Contact & Commissions</b></a></div>
+  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
   	<div class="column" style="float:"></div>
 </div>
 </div>
@@ -215,7 +215,7 @@
 			<p class="PageIntroText">This page serves as an index for the majority of the maps I have produced over the past decade, both as a hobbyist and freelance cartographer.</br>
 			<p class="PageIntroText">My best cartographic design work can be found in the first section. This section is a mix of thematic maps, historical reference maps, park maps, and alternate history & fantasy cartography. The second section contains a gallary of thematic and reference maps produced in ArcGIS for commissions, coursework, and personal interest. Finally, the final two sections contain older science fiction & fantasy maps produced in high school and college, preserved for posterity. </p>
 
-			<p class="PageIntroText">Be sure to also check out my series of 80+ historical reference maps, which can be found on the <a href="https://hadaril.github.io/WorldaIndex">"NextGen WorldA's" page</a></p>
+			<p class="PageIntroText">Be sure to also check out my series of 80+ historical reference maps, which can be found on the <a href="https://conti-cartography.github.io/WorldaIndex">"NextGen WorldA's" page</a></p>
 
 		</br></br>
 
