--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 <div class="navbar">
  	<div class="row">
 	<div class="column">
-		<a href="https://hadaril.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
+		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
 	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Portfolio" style="float: left; padding-right: 10px">Map Portfolio</a>
-  		<a href="https://hadaril.github.io/DataViz" style="float: left; padding-right: 10px">Data Visualizations</a>
-  		<a href="https://hadaril.github.io/WebMaps" style="float: left; padding-right: 10px">Web Maps</a>
-	  	<a href="https://hadaril.github.io/WorldaIndex" style="float: left; padding-right: 10px">WorldA Index</a></div>
+  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left; padding-right: 10px">Map Portfolio</a>
+  		<a href="https://conti-cartography.github.io/DataViz" style="float: left; padding-right: 10px">Data Visualizations</a>
+  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left; padding-right: 10px">Web Maps</a>
+	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left; padding-right: 10px">WorldA Index</a></div>
   	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Contact"><b>Contact & Commissions</b></a></div>
+  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
   	<div class="column" style="float:"></div>
 </div>
 </div>
@@ -116,10 +116,10 @@
 <div class="PortfolioGallery2" style = "text-align:  center; margin-left: 4%">
 	<div class="row">
 		<div class = "column" style="float: none; padding: 0px">
-			<a target="_blank" href = "https://hadaril.github.io/Portfolio"><img style="padding: 25px;" src="StaticMaps.png"></a>
-			<a target="_blank" href = "https://hadaril.github.io/WorldaIndex"><img style="padding: 25px;" src="NextGen.png"></a>
-			<a target="_blank" href = "https://hadaril.github.io/DataViz"><img style="padding: 25px;" src="DataViz.png"></a>
-			<a target="_blank" href = "https://hadaril.github.io/WebMaps"><img style="padding: 25px;" src="WebMaps.png"></a>
+			<a target="_blank" href = "https://conti-cartography.github.io/Portfolio"><img style="padding: 25px;" src="StaticMaps.png"></a>
+			<a target="_blank" href = "https://conti-cartography.github.io/WorldaIndex"><img style="padding: 25px;" src="NextGen.png"></a>
+			<a target="_blank" href = "https://conti-cartography.github.io/DataViz"><img style="padding: 25px;" src="DataViz.png"></a>
+			<a target="_blank" href = "https://conti-cartography.github.io/WebMaps"><img style="padding: 25px;" src="WebMaps.png"></a>
 		</div>
 	</div>
 </div>
