--- a/Contact.html
+++ b/Contact.html
@@ -125,14 +125,14 @@ a.contact_link {
 <div class="navbar">
  	<div class="row">
 	<div class="column">
-		<a href="https://hadaril.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
+		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
 	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Portfolio" style="float: left">Map Portfolio</a>
-  		<a href="https://hadaril.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://hadaril.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://hadaril.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
+  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left">Map Portfolio</a>
+  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
   	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://hadaril.github.io/Contact"><b>Contact & Commissions</b></a></div>
+  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
   	<div class="column" style="float:"></div>
 </div>
 </div>
