--- a/DataViz.html
+++ b/DataViz.html
@@ -15,23 +15,35 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 
 <style>
-		body {
-	   		 font-family: "source sans pro";
-	   		 line-height: 18.5px;
-			   }
+
+	/* The top menu */
+
+	body {
+		font-family: "source sans pro";
+	}
+
+	p {
+		font-size: 20px;
+		line-height: 22px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+
+
 	.navbar {
 		  overflow: hidden;
 		  background-color: #333;
 		  position: fixed; /* Set the navbar to fixed position */
 		  top: 0; /* Position the navbar at the top of the page */
 		  width: 100%; /* Full width */
-		  		  line-height: 18.5px;
+		  line-height: 18.5px;
 		  font-size: 16px;
 		  font-weight: 450;
 		  justify-content: center;
 		  padding-left: 5%;
-		  
-		
+		  padding-bottom: 1px;
+		  z-index: 99 !important;
+
 		}
 
 		/* Links inside the navbar */
@@ -48,34 +60,43 @@
 
 		}
 
-
-		/* Change background on mouse-over */
+	/* Change background on mouse-over */
 	.navbar a:hover {
 		  background: #ddd;
 		  color: black;
 		  border-radius: 5px;
 	}
 
+	.NavRowHead {
+			padding: 10px;
+		  text-decoration: none;
+		  line-height: 18.5px;
+		  font-size: 16px;
+		  font-weight: 450;
+		  border-radius: 5px;
+	}
+
+
 	.main {
 			  
 		font-family: "source sans pro";
-
 		text-align: justify;
 		text-justify: inter-word;
 	  	background: #222325;
 		color: #f7f7f7;
-		font-size: 13px;
+		font-size: 16px;
 		font-style: normal;
 		font-weight: 450;
 		line-height: 18.5714px;
-		margin-top: 100px;
+		margin-top: 120px;
 		margin-left: 350px;
 		padding-left: 1.5%;
 		/*border-left: 7px solid #9195a1;*/
+		margin-right: px;
 
 	}
 
-	.sidenav {
+.sidenav {
 	  width: 300px;
 	  position: fixed;
 	  z-index: 1;
@@ -99,42 +120,111 @@
 		margin: 0px;
 		margin-bottom: 10px;
 	}
-	.sidenav a:hover {
+.sidenav a:hover {
 	  color: #064579;
+	  border-radius: 5px;
 	}
 
-	.TopText {
-		padding-right: 30%;	font-size: 16px; line-height: 1.25;
+.image {
+	 position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+  padding-bottom: 3px;
+}
+
+.image:hover .overlay {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 16px;
+  padding-top: 30px;
+   padding-bottom: 30px;
+  margin-bottom: px;
+  text-align: center;
+  line-height: 18px;
+}
+
+.column {
+	padding: 0px;
+}
+
+.row {
+	padding-top: 1px;
+}
+
+.SectionHeader {
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+.logo {
+	position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  z-index: 100	 !important;
+}
+
+@media screen and (min-width: 1281px) {
+	.SectionHeader {
+		position: sticky;
+		top: 51px;
+		z-index: 100;
+		background-color: #222325;
 	}
 
-  @media screen and (max-width: 1280px) {
-		body {margin-left: 0px; padding-left: 15px;}
-		.main { margin-left: 15px; }
-		.navbar { font-size: 18px }
+}
+
+@media screen and (max-width: 1280px) {
+		body {margin-left: 0px; margin-right: 0px; }
+		.main { padding-left: 30px; margin-left: 0px; margin-right: 30px; }
+		.navbar { padding-left: 90px; font-size: 18px }
+		.PageIntroText { margin-right: 40px }
 	}
 
-	.column {
-		padding: 3px;
-	}
+
+	
 
 </style>
 </head>
 <body>
 
-<div class="navbar">
- 	<div class="row">
-	<div class="column">
-		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
-	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left">Map Portfolio</a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
-  	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
-</div>
+<div class="logo">
+	<a target="_blank" href="https://conti-cartography.github.io/">
+		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
+
+<div class="navbar">
+  <div class="row">
+
+ 	<!-- Old background color: 403e3e //-->
+		<div class="column" style="background-color: #494746; border-radius: 10px; margin: 5px;">
+			<a href="https://conti-cartography.github.io/"><b>Home Page</b></a></div>
+
+		<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
+			<!-- <div class = "NavRowHead" style="background-color: #63615b; float:  left"><b>Portfolio Galleries:</b></div> //-->
+  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left"><b>Map Portfolio</b></a>
+  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a>
+		</div>
+		
+  	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
+  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a>
+  	</div>
+
+	</div>
+</div>
 
 <div class ="sidenav">
 <p style="font-style: bold; font-size: 18px">Navigation</p>
@@ -154,7 +244,15 @@
 <br>
 
 
-<h3 id="PopMaps">Population Maps</h3>
+
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%;">
+<div class = "SectionHeader" id="PopMaps">
+	<h3 style = "margin-bottom: 10px; margin-top: 10px">Population Maps</h3>
+</div>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%">
+	
+</br>
+
 <div class="PortfolioGallery2">
 	<div class="row">
 		<div class="column">
@@ -198,7 +296,15 @@
 
 <br>
 
-<h3 id="Tables">Tables</h3>
+
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%;">
+<div class = "SectionHeader" id="Tables">
+	<h3 style = "margin-bottom: 10px; margin-top: 10px">Tables</h3>
+</div>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%">
+</br>
+
+
 <div class="PortfolioGallery2">
 	<!--
 		<div class="row">
@@ -224,7 +330,13 @@
 
 <br>
 
-<h3 id="EthnicCharts">Ethnicity Charts </h3>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%;">
+<div class = "SectionHeader" id="EthnicCharts">
+	<h3 style = "margin-bottom: 10px; margin-top: 10px">Ancestry Charts</h3>
+</div>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%">
+</br>
+
 <p>Data for these maps is sourced from the General Social Survey (GSS).
 
 <div class = "PortfolioGallery2">
@@ -259,7 +371,14 @@
 	</div>
 
 <br>
-<h3 id="EngageMaps">Engagement and Belief Maps </h3>
+
+
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%;">
+<div class = "SectionHeader" id="EngageMaps">
+	<h3 style = "margin-bottom: 10px; margin-top: 10px">Engagement and Belief Maps </h3>
+</div>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%">
+</br>
 
 <div class = "PortfolioGallery2">
 
@@ -298,7 +417,14 @@
 
 <br>
 
-<h3 id="OtherCharts">Other Charts</h3>
+
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%;">
+<div class = "SectionHeader" id="OtherCharts">
+	<h3 style = "margin-bottom: 10px; margin-top: 10px">Other Charts</h3>
+</div>
+<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin: 0px; width:100%">
+</br>
+
 
 <div class = "PortfolioGallery2">
 	<div class="row">
