--- a/WebMaps.html
+++ b/WebMaps.html
@@ -15,74 +15,74 @@ body {
 	font-family: source sans pro;
 
 }
-/* The top menu */
-.navbar {
-		  overflow: hidden;
-		  background-color: #333;
-		  position: fixed; /* Set the navbar to fixed position */
-		  top: 0; /* Position the navbar at the top of the page */
-		  width: 100%; /* Full width */
-		  line-height: 18.5px;
-		  font-size: 16px;
-		  font-weight: 450;
-		  justify-content: center;
-		  padding-left: 5%;
-		  padding-bottom: 1px;
-		  z-index: 99 !important;
-
-		}
-
-		/* Links inside the navbar */
-	.navbar a {
-		  float: left;
-		  /* display: block; */
-		  color: #f2f2f2;
-		  text-align: center;
-		  padding: 10px;
-		  text-decoration: none;
-		  line-height: 18.5px;
-		  font-size: 16px;
-		  font-weight: 450;
-
-		}
-
-
-		/* Change background on mouse-over */
-	.navbar a:hover {
-		  background: #ddd;
-		  color: black;
-		  border-radius: 5px;
-	}
-
 .main {
 	margin-top: 30px; /* Same width as the sidebar + left position in px */
 	margin-left: 1-%;
 }
 
-@media screen and (max-width: 1280px) {
-		body {margin-left: 0px; padding-left: 15px;}
-		.main { margin-left: 15px; }
-		.navbar { font-size: 18px }
-	}
 
 .MainPageHeader {
 	padding-top:  60px;
 	text-align:  center;
 }
+
+
+.logo {
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  z-index: 100	 !important;
+}
+
+@media screen and (max-width: 1280px) {
+		body {margin-left: 0px; margin-right: 0px; }
+		.main { padding-left: 30px; margin-left: 0px; margin-right: 30px; }
+		.navbar { padding-left: 90px; font-size: 18px }
+		.PageIntroText { margin-right: 40px }
+	}
+
+.Wrapper {
+	position: relative;
+}
+
+
+.Overlay {
+	width: 100%;
+	height: 800;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-left: 5%; 
+	margin-right: 5%; 
+	margin-top: -11px;
+	text-align: center;
+	font-color: #000000;
+	font-size: 30px;
+	font-family: "Crimson Text";
+	padding-top: 20%;
+	background-color: rgba(0, 0, 0, 0.8);
+
+}
+
+
 </style>
 </head>
 
 
+<div class="logo">
+	<a target="_blank" href="https://conti-cartography.github.io/">
+		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
+</div>
+
 <div class="navbar">
  	<div class="row">
 	<div class="column">
-		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
-	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
+		<a href="https://conti-cartography.github.io/" style="background-color: #494746; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
+	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
   		<a href="https://conti-cartography.github.io/Portfolio" style="float: left">Map Portfolio</a>
   		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
   		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
 	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
-  	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
+  	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
   		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
   	<div class="column" style="float:"></div>
 </div>
@@ -92,5 +92,10 @@ body {
 
 	<h1 style="font-family: 'crimson text'; text-align: center; margin-top: 70px; margin-bottom: 0px" class = "PageTitle">Web Maps</h1>
 <div class="main">
-</div><iframe src="https://mygmu.maps.arcgis.com/apps/instant/basic/index.html?appid=c004c45ab17d48cdabdaf146cc3a4434" width="100%" height="800" frameborder="0" style="border:0; margin-left: 5%; margin-right: 5%; margin-top: -11px" allowfullscreen>iFrames are not supported on this page.</iframe>
+</div>
+
+<div class = "container">
+	<!-- <div class="Overlay">Work in progress, come back soon!<div> //-->
+	<iframe src="https://mygmu.maps.arcgis.com/apps/instant/basic/index.html?appid=c004c45ab17d48cdabdaf146cc3a4434" width="100%" height="800" frameborder="0" style="border:0; margin-left: 5%; margin-right: 5%; margin-top: -11px" allowfullscreen>iFrames are not supported on this page.</iframe>
+</div>
 </div>
