--- a/index.html
+++ b/index.html
@@ -14,99 +14,130 @@
 
 	<style>
 
+h1.PageTitle {
+	font-family: "Crimson Text";
+}
 .column {
   float: left;
-  padding-left: 4px;
+  padding: 0px;
+  margin: 0px;
 }
 
-	/* The top menu */
-	.navbar {
-		  overflow: hidden;
-		  background-color: #333;
-		  position: fixed; /* Set the navbar to fixed position */
-		  top: 0; /* Position the navbar at the top of the page */
-		  width: 100%; /* Full width */
-		  line-height: 18.5px;
-		  font-size: 16px;
-		  font-weight: 450;
-		  justify-content: center;
-		  padding-left: 5%;
-		  padding-bottom: 1px;
-		  z-index: 99 !important;
+.row {
+	padding-top: 1px;
+}
 
-		}
+/* The top menu */
+.navbar {
+	  overflow: hidden;
+	  background-color: #333;
+	  position: fixed; /* Set the navbar to fixed position */
+	  top: 0; /* Position the navbar at the top of the page */
+	  width: 100%; /* Full width */
+	  line-height: 18.5px;
+	  font-size: 16px;
+	  font-weight: 450;
+	  justify-content: center;
+	  padding-left: 5%;
+	  padding-bottom: 1px;
+	  z-index: 99 !important;
 
-		/* Links inside the navbar */
-	.navbar a {
-		  float: left;
-		  /* display: block; */
-		  color: #f2f2f2;
-		  text-align: center;
-		  padding: 10px;
-		  text-decoration: none;
-		  line-height: 18.5px;
-		  font-size: 16px;
-		  font-weight: 450;
-
-		}
-
-
-		/* Change background on mouse-over */
-	.navbar a:hover {
-		  background: #ddd;
-		  color: black;
-		  border-radius: 5px;
 	}
 
+	/* Links inside the navbar */
+.navbar a {
+	  float: left;
+	  /* display: block; */
+	  color: #f2f2f2;
+	  text-align: center;
+	  padding: 10px;
+	  text-decoration: none;
+	  line-height: 18.5px;
+	  font-size: 16px;
+	  font-weight: 450;
 
-	.main {
-	  margin-top: 30px; /* Same width as the sidebar + left position in px */\
-	  padding-left: 30px
 	}
 
-	@media screen and (max-width: 1280px) {
+/* Change background on mouse-over */
+.navbar a:hover {
+	  background: #ddd;
+	  color: black;
+	  border-radius: 5px;
+}
+
+.logo {
+	position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  z-index: 100	 !important;
+}
+
+.main {
+  margin-top: 30px; /* Same width as the sidebar + left position in px */\
+  padding-left: 30px
+}
+
+@media screen and (max-width: 1280px) {
 		body {margin-left: 0px; padding-left: 15px;}
 		.main { margin-left: 15px; }
-		.navbar { font-size: 18px }
+		.navbar { font-size: 18px; padding-left: 90px}
+		.logo{ margin-right: 20px }
 	}
-	body{
-		padding-left: 0px;
-		margin-left: 0px;
-	}
+
+body{
+	padding-left: 0px;
+	margin-left: 0px;
 }
-	</style>
+
+	
+}
+
+
+</style>
 </head>
 <body>
 
-<div class="navbar">
- 	<div class="row">
-	<div class="column">
-		<a href="https://conti-cartography.github.io/" style="background-color: #403e3e; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
-	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left; padding-right: 10px">Map Portfolio</a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left; padding-right: 10px">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left; padding-right: 10px">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left; padding-right: 10px">WorldA Index</a></div>
-  	<div class="column" style="background-color: #403e3e; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
-  	<div class="column" style="float:"></div>
-</div>
+
+<div class="logo">
+	<a target="_blank" href="https://conti-cartography.github.io/">
+		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
+
+<div class="navbar">
+  <div class="row">
+
+ 	<!-- Old background color: 403e3e //-->
+		<div class="column" style="background-color: #494746; border-radius: 10px; margin: 5px;">
+			<a href="https://conti-cartography.github.io/" style = "font-weight: bold;">Home Page</a></div>
+
+		<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
+			<!-- <div class = "NavRowHead" style="background-color: #63615b; float:  left"><b>Portfolio Galleries:</b></div> //-->
+  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left"><b>Map Portfolio</b></a>
+  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a>
+		</div>
+
+  	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
+  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a>
+  	</div>
+
+	</div>
+</div>
 
 <div class = "main">
 
 
 <div class ="MainPageHeader" style = "margin-top: 50px">
 	<h1 class = "PageTitle" style="color: #ffffff">JOEL CONTI - CARTOGRAPHIC PORTFOLIO</h1>
-	<h2 class = "PageSubtitle" style="font-size:14px">An Archive and Gallery for my Cartographic Work</h2>
+	<h2 class = "PageSubtitle" style="font-size:18px; font-style: light;">An archive and gallery for my cartographic work</h2>
 </div></br>
 
 <div class = "IntroText">
 	<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2;width:35%;">
 	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 1px; margin-bottom: 20px;width:42%;">
-	<h2 class = "PageSubtitle" style = "font-style:italic; text-align: center; margin-bottom:30px">Hello! I am Joel Conti, and this is my cartography portfolio.</h2>
-	<p style = "font-size:15px"> I am a lifelong map enthusiast and hobbyist, and have been doing cartography commission work since 2016. This page serves as a portfolio for (most) of my cartographic work produced over the past decade. Use the navigation buttons on the top navigation bar or the links below to explore the full portfolio. </p>
+	<h2 class = "PageSubtitle" style = "text-align: center; margin-bottom:30px">Hello! I am Joel Conti, and this is my cartography portfolio.</h2>
+	<p style = "font-size:15px"> I am a freelance cartographer, and lifelong map enthusiast with just under a decade of cartographic experience. This page serves as a portfolio for (most) of my cartographic work produced over the past decade. Use the navigation buttons on the top navigation bar or the links below to explore the full portfolio. </p>
 	<p style = "font-size:15px">My portfolio includes a wide range of maps, including thematic maps & statistical maps produced in ArcGIS, historical reference maps, as well as alternate-history, fantasy, and sci-fi maps produced in Adobe Illustrator. This portfolio also contains an archive of the “NextGen WorldA Base Maps” – a series of 80+ historical reference maps built for use by the online mapping community. <i>Many thanks go out to the other team members who helped contribute to this ambitious project.</i> </p>
 	<p style = "font-size:16px"><b>For information about cartography commissions, check out the contact page! I would love to get in touch!</b></p>
 	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 20px;width:42%;">
