Added S&P Global Maps
Added S&P Global Maps

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -365,7 +365,8 @@
 			</div>
 
 			<div class="row">
-				<div class="column"><div class="image">
+				<div class="column">
+					<div class="image">
 					<a target="_blank" href="maps/VAMinority.png">
 					<img src="maps/VAMinority.png" alt="Virginia Minority Population" width="100%">
 					<div class="overlay">A choropleth map of the 2020 minority share of the population by county in Virginia</br><i>Data from ESRI.</i></div>
@@ -379,6 +380,75 @@
 	<h3 style = "margin-bottom: 0px; margin-top: 10px;">S&P Global<span style="font-variant: normal; font-size: 23px;">: &nbsp &nbsp Maps produced at S&P Global with MAPublisher.</span></h3>
 </div>
 <hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2;width:100%; margin-top: 10px; margin-bottom: 45px;">
+
+
+<div class="PortfolioGallery2">
+
+		<div class="row">
+				<div class="column"  style="width: 49.65%; float: left">
+					<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_Eclipse.png">
+					<img src="maps/SPGlobal/SPG_Eclipse.png" alt="Map of the 2024 Solar Eclipse" width="100%">
+					<div class="overlay">Map of the 2024 Solar Eclipse, produced for S&P Global Commodity Insights.</div>
+					</a></div></div>
+				<div class="column"  style="width: 49.65%; float: right"><div class="image">
+					<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_California.png">
+					<img src="maps/SPGlobal/SPG_California.png" alt="Map of California's Hydrogen Infrastructure" width="100%">
+					<div class="overlay">Infographic of California's growing hydrogen infrastructure, produced for S&P Global Commodity Insights.</div>
+					</a></div></div>
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class="column"  style="width: 35%; float: left">
+				<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_Algeria.png">
+				<img src="maps/SPGlobal/SPG_Algeria.png" alt="Map of the 2024 Solar Eclipse" width="100%">
+				<div class="overlay">Map of Algeria's oil and gas exports, produced for S&P Global Commodity Insights</div>
+				</a></div></div>
+
+			<div class="column"  style="width: 32.3%; float: right">
+				<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_NJ.png">
+				<img src="maps/SPGlobal/SPG_NJ.png" alt="Map of the 2024 Solar Eclipse" width="100%">
+				<div class="overlay">Map of potential lost LNG capacity without REA facilities, produced for S&P Global Commodity Insights.</div>
+				</a></div></div>
+
+			<div class="column"  style="width: 31.5%; float: right; margin-right: 7px;"><div class="image">
+				<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_Transco_SE.png">
+				<img src="maps/SPGlobal/SPG_Transco_SE.png" alt="Map of California's Hydrogen Infrastructure" width="100%">
+				<div class="overlay">TRANSCO Pipeline expansion in the Southeastern US, produced for S&P Global Commodity Insights.</div>
+				</a></div></div>
+			</div>
+
+
+		<div class="row">
+				<div class="column"  style="width: 65.2%; float: left">
+					<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_UAE.png">
+					<img src="maps/SPGlobal/SPG_UAE.png" alt="Map of the 2024 Solar Eclipse" width="100%">
+					<div class="overlay">Map of the UAE's energy certificate issuers, produced for S&P Global Commodity Insights.</div>
+					</a></div></div>
+				<div class="column"  style="width: 34.2%; float: right"><div class="image">
+					<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_Oman.svg">
+					<img src="maps/SPGlobal/SPG_Oman.svg" alt="Map of California's Hydrogen Infrastructure" width="100%">
+					<div class="overlay">Map of Oman's oil and gas concessions, produced for S&P Global Commodity Insights.</div>
+					</a></div></div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="column"  style="width: 36.3%; float: left">
+				<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_ANGEA.png">
+				<img src="maps/SPGlobal/SPG_ANGEA.png" alt="Map of the 2024 Solar Eclipse" width="100%">
+				<div class="overlay">Coal shipment routes and imports in Asia Pacific, produced for S&P Global Commodity Insights</div>
+				</a></div></div>
+			<div class="column"  style="width: 63%; float: right"><div class="image">
+				<div class="image"><a target="_blank" href="maps/SPGlobal/SPG_UK_CCUS.png">
+				<img src="maps/SPGlobal/SPG_UK_CCUS.png" alt="Map of California's Hydrogen Infrastructure" width="100%">
+				<div class="overlay">UK CCUS cluster investments, produced for S&P Global Commodity Insights.</div>
+				</a></div></div>
+			</div>
+		</div>
+
+</div>
 
 
 
