Updated rome map
Updated rome map

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -224,8 +224,8 @@
 
 			<div class="row">
 				<div class="column">
-					<div class="image"><a target="_blank" href="maps/Rome.jpg">
-					<img src="maps/Rome.jpg" alt="Map showing the Roman Empire during the reign of Hadarian" width="100%">
+					<div class="image"><a target="_blank" href="maps/Rome.png">
+					<img src="maps/Rome.png" alt="Map showing the Roman Empire during the reign of Hadarian" width="100%">
 					<div class="overlay">Map of the Roman Empire during the Reign of Emperor Hadrian.</br><i>Produced in ArcGIS and Adobe Illustrator. Hydrographic and coastline data sourced from Natural Earth. Hillshade from ESRI.</i></div>
 					</a></div></div>
 			</div>
