--- a/Contact.html
+++ b/Contact.html
@@ -157,21 +157,21 @@ body{
 
 
 <div class="logo">
-	<a target="_blank" href="https://conti-cartography.github.io/">
+	<a target="_blank" href="https://conticartography.net/">
 		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
 <div class="navbar">
  	<div class="row">
 	<div class="column">
-		<a href="https://conti-cartography.github.io/" style="background-color: #494746; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
+		<a href="https://conticartography.net/" style="background-color: #494746; margin: 5px; border-radius: 10px;"><b>Home Page</b></a></div>
 	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left">Map Portfolio</a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a></div>
+  		<a href="https://conticartography.net/Portfolio" style="float: left">Map Portfolio</a>
+  		<a href="https://conticartography.net/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conticartography.net/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conticartography.net/WorldaIndex" style="float: left">WorldA Index</a></div>
   	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a></div>
+  		<a href="https://conticartography.net/Contact"><b>Contact & Commissions</b></a></div>
   	<div class="column" style="float:"></div>
 </div>
 </div>
