--- a/DataViz.html
+++ b/DataViz.html
@@ -199,7 +199,7 @@
 <body>
 
 <div class="logo">
-	<a target="_blank" href="https://conti-cartography.github.io/">
+	<a target="_blank" href="https://conticartography.net/">
 		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
@@ -209,18 +209,18 @@
 
  	<!-- Old background color: 403e3e //-->
 		<div class="column" style="background-color: #494746; border-radius: 10px; margin: 5px;">
-			<a href="https://conti-cartography.github.io/"><b>Home Page</b></a></div>
+			<a href="https://conticartography.net/"><b>Home Page</b></a></div>
 
 		<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
 			<!-- <div class = "NavRowHead" style="background-color: #63615b; float:  left"><b>Portfolio Galleries:</b></div> //-->
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left"><b>Map Portfolio</b></a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a>
+  		<a href="https://conticartography.net/Portfolio" style="float: left"><b>Map Portfolio</b></a>
+  		<a href="https://conticartography.net/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conticartography.net/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conticartography.net/WorldaIndex" style="float: left">WorldA Index</a>
 		</div>
 		
   	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a>
+  		<a href="https://conticartography.net/Contact"><b>Contact & Commissions</b></a>
   	</div>
 
 	</div>
