--- a/Portfolio.html
+++ b/Portfolio.html
@@ -163,7 +163,7 @@
 <body>
 
 <div class="logo">
-	<a target="_blank" href="https://conti-cartography.github.io/">
+	<a target="_blank" href="https://conticartography.net/">
 		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
@@ -173,18 +173,18 @@
 
  	<!-- Old background color: 403e3e //-->
 		<div class="column" style="background-color: #494746; border-radius: 10px; margin: 5px;">
-			<a href="https://conti-cartography.github.io/"><b>Home Page</b></a></div>
+			<a href="https://conticartography.net/"><b>Home Page</b></a></div>
 
 		<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
 			<!-- <div class = "NavRowHead" style="background-color: #63615b; float:  left"><b>Portfolio Galleries:</b></div> //-->
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left"><b>Map Portfolio</b></a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a>
+  		<a href="https://conticartography.net/Portfolio" style="float: left"><b>Map Portfolio</b></a>
+  		<a href="https://conticartography.net/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conticartography.net/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conticartography.net/WorldaIndex" style="float: left">WorldA Index</a>
 		</div>
 
   	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a>
+  		<a href="https://conticartography.net/Contact"><b>Contact & Commissions</b></a>
   	</div>
 
 	</div>
@@ -205,7 +205,7 @@
 	</br>
 		<p class="PageIntroText">This page serves as an index for the majority of the maps I have produced over the past decade, both as a hobbyist and freelance cartographer.</br>
 		<p class="PageIntroText">My best cartographic design work can be found in the first section. This section is a mix of thematic maps, historical reference maps, park maps, and alternate history & fantasy cartography. The second section contains a gallary of thematic and reference maps produced in ArcGIS for commissions, coursework, and personal interest. Finally, the final two sections contain older science fiction & fantasy maps produced in high school and college, preserved for posterity. </p>
-		<p class="PageIntroText">Be sure to also check out my series of 80+ historical reference maps, which can be found on the <a href="https://conti-cartography.github.io/WorldaIndex">"NextGen WorldA's" page</a></p>
+		<p class="PageIntroText">Be sure to also check out my series of 80+ historical reference maps, which can be found on the <a href="https://conticartography.net/WorldaIndex">"NextGen WorldA's" page</a></p>
 
 <div id="TheBest"></div>
 
