--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body{
 
 
 <div class="logo">
-	<a target="_blank" href="https://conti-cartography.github.io/">
+	<a target="_blank" href="https://conticartography.net/">
 		<img src="GooseCompass.svg" width = 70 height = 70 style ="float: left; padding-left: 10px"></a>
 </div>
 
@@ -108,18 +108,18 @@ body{
 
  	<!-- Old background color: 403e3e //-->
 		<div class="column" style="background-color: #494746; border-radius: 10px; margin: 5px;">
-			<a href="https://conti-cartography.github.io/" style = "font-weight: bold;">Home Page</a></div>
+			<a href="https://conticartography.net/" style = "font-weight: bold;">Home Page</a></div>
 
 		<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
 			<!-- <div class = "NavRowHead" style="background-color: #63615b; float:  left"><b>Portfolio Galleries:</b></div> //-->
-  		<a href="https://conti-cartography.github.io/Portfolio" style="float: left"><b>Map Portfolio</b></a>
-  		<a href="https://conti-cartography.github.io/DataViz" style="float: left">Data Visualizations</a>
-  		<a href="https://conti-cartography.github.io/WebMaps" style="float: left">Web Maps</a>
-	  	<a href="https://conti-cartography.github.io/WorldaIndex" style="float: left">WorldA Index</a>
+  		<a href="https://conticartography.net/Portfolio" style="float: left"><b>Map Portfolio</b></a>
+  		<a href="https://conticartography.net/DataViz" style="float: left">Data Visualizations</a>
+  		<a href="https://conticartography.net/WebMaps" style="float: left">Web Maps</a>
+	  	<a href="https://conticartography.net/WorldaIndex" style="float: left">WorldA Index</a>
 		</div>
 
   	<div class="column" style="background-color: #494746; margin: 5px; border-radius: 10px; margin-left: 30px">
-  		<a href="https://conti-cartography.github.io/Contact"><b>Contact & Commissions</b></a>
+  		<a href="https://conticartography.net/Contact"><b>Contact & Commissions</b></a>
   	</div>
 
 	</div>
@@ -147,10 +147,10 @@ body{
 <div class="PortfolioGallery2" style = "text-align:  center; margin-left: 4%">
 	<div class="row">
 		<div class = "column" style="float: none; padding: 0px">
-			<a target="_blank" href = "https://conti-cartography.github.io/Portfolio"><img style="padding: 25px;" src="StaticMaps.png"></a>
-			<a target="_blank" href = "https://conti-cartography.github.io/WorldaIndex"><img style="padding: 25px;" src="NextGen.png"></a>
-			<a target="_blank" href = "https://conti-cartography.github.io/DataViz"><img style="padding: 25px;" src="DataViz.png"></a>
-			<a target="_blank" href = "https://conti-cartography.github.io/WebMaps"><img style="padding: 25px;" src="WebMaps.png"></a>
+			<a target="_blank" href = "https://conticartography.net/Portfolio"><img style="padding: 25px;" src="StaticMaps.png"></a>
+			<a target="_blank" href = "https://conticartography.net/WorldaIndex"><img style="padding: 25px;" src="NextGen.png"></a>
+			<a target="_blank" href = "https://conticartography.net/DataViz"><img style="padding: 25px;" src="DataViz.png"></a>
+			<a target="_blank" href = "https://conticartography.net/WebMaps"><img style="padding: 25px;" src="WebMaps.png"></a>
 		</div>
 	</div>
 </div>
