--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ body{
 	<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2;width:35%;">
 	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 1px; margin-bottom: 20px;width:42%;">
 	<h2 class = "PageSubtitle" style = "text-align: center; margin-bottom:30px">Hello! I am Joel Conti, and this is my cartography portfolio.</h2>
-	<p style = "font-size:15px"> I am a freelance cartographer, and lifelong map enthusiast with just under a decade of cartographic experience. This page serves as a portfolio for (most) of my cartographic work produced over the past decade. Use the navigation buttons on the top navigation bar or the links below to explore the full portfolio. </p>
+	<p style = "font-size:15px"> I am a freelance cartographer, and lifelong map enthusiast with just under a decade of cartographic experience. Use the navigation buttons on the top navigation bar or the links below to explore the full portfolio. </p>
 	<p style = "font-size:15px">My portfolio includes a wide range of maps, including thematic maps & statistical maps produced in ArcGIS, historical reference maps, as well as alternate-history, fantasy, and sci-fi maps produced in Adobe Illustrator. This portfolio also contains an archive of the “NextGen WorldA Base Maps” – a series of 80+ historical reference maps built for use by the online mapping community. <i>Many thanks go out to the other team members who helped contribute to this ambitious project.</i> </p>
-	<p style = "font-size:16px"><b>For information about cartography commissions, check out the contact page! I would love to get in touch!</b></p>
+	<p style = "font-size:16px"><b>Want your own custom maps? Commissions are OPEN! For information about cartography commissions, check out the contact page - I would love to get in touch!</b></p>
 	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 20px;width:42%;">
 	<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin-top: 1px;width:35%;">
 </div>
