--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ h1.PageTitle {
   padding: 0px;
   margin: 0px;
 }
-
+body {
+	margin-right: 0px;
+}
 .row {
 	padding-top: 1px;
 }
@@ -88,7 +90,21 @@ body{
 	margin-left: 0px;
 }
 
+.commissions_text {
+	text-align: center;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.commissions {
+	margin-left: 10%;
+	margin-right: 10%;
 	
+}
+
+img {
+	border-radius: 10px;
+}
 }
 
 
@@ -130,21 +146,52 @@ body{
 
 <div class ="MainPageHeader" style = "margin-top: 50px">
 	<h1 class = "PageTitle" style="color: #ffffff">JOEL CONTI - CARTOGRAPHIC PORTFOLIO</h1>
-	<h2 class = "PageSubtitle" style="font-size:18px; font-style: light;">An archive and gallery for my cartographic work</h2>
-</div></br>
-
-<div class = "IntroText">
-	<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2;width:35%;">
-	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 1px; margin-bottom: 20px;width:42%;">
-	<h2 class = "PageSubtitle" style = "text-align: center; margin-bottom:30px">Hello! I am Joel Conti, and this is my cartography portfolio.</h2>
-	<p style = "font-size:15px"> I am a freelance cartographer, and lifelong map enthusiast with just under a decade of cartographic experience. Use the navigation buttons on the top navigation bar or the links below to explore the full portfolio. </p>
-	<p style = "font-size:15px">My portfolio includes a wide range of maps, including thematic maps & statistical maps produced in ArcGIS, historical reference maps, as well as alternate-history, fantasy, and sci-fi maps produced in Adobe Illustrator. This portfolio also contains an archive of the “NextGen WorldA Base Maps” – a series of 80+ historical reference maps built for use by the online mapping community. <i>Many thanks go out to the other team members who helped contribute to this ambitious project.</i> </p>
-	<p style = "font-size:16px"><b>Want your own custom maps? Commissions are OPEN! For information about cartography commissions, check out the contact page - I would love to get in touch!</b></p>
-	<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 20px;width:42%;">
-	<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin-top: 1px;width:35%;">
+	<h2 class = "PageSubtitle" style="font-size:18px; font-style: light;">Freelance Cartographer | Map Enthusiast | Geographer</h2>
 </div>
-</br></br></br></br></br>
-<div class="PortfolioGallery2" style = "text-align:  center; margin-left: 4%">
+
+
+
+
+
+<div class = "commissions" style = "padding: 15px; border-radius: 10px; width: 65%; text-align: center; margin-left: 15.5%;">
+
+				<div>
+				<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2;width:95%;">
+				<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 1px; margin-bottom: 20px;width:100%;">
+			</div>
+		<div style = "display: flex">
+		
+
+			<div style="display:block; padding: 10px;"><img src="Photo.png" style = "margin-right: 30px; width: 140px; float: left;  border-radius: 10px; vertical-align: center;"></div>
+
+			<div>
+				<h2 class = "PageSubtitle" style = "margin-bottom:30px">Hello! I am Joel Conti. I'm a freelance and full-time cartographer with nearly 10 years of experience.</h2>
+				
+				<p style = "font-size:15px">Born and raised in the Washington D.C. area, I've been a map enthusiast since childhood. I've transformed that passion into a full-time career in cartography, with two years as a cartographer at S&P Global Commodity Insights, and just under a decade of part-time freelance work. With a particular interest in historical and reference cartography, my maps have been published in multiple university presses, submitted to local parks departments, and sold as full-size prints. My freelance speciality is primarily cartography for academic publications, though I'm always excited to take on new challenges!</p>
+				<p style = "font-size:16px;">Want your own custom maps? Be it a map for your book, a print for your wall, something for your fantasy setting, or anything in between, I would love to work with you. For commission inquiries, visit the contact page linked above.</p>
+			</div>
+
+
+	</div>
+		<div>
+				<hr style="height:2px;border-width:0; border-top: 2px solid #d2d2d2;margin-top: 20px;width:100%;">
+				<hr style="height:2px;border-width:0; border-top: 1px dotted #d2d2d2; margin-top: 1px;width:95%;">
+		</div>
+</div>
+
+
+
+
+</div>
+
+
+
+</br></br>
+<div class="PortfolioGallery2" style = "text-align:  center;">
+
+
+
+
 	<div class="row">
 		<div class = "column" style="float: none; padding: 0px">
 			<a target="_blank" href = "https://conticartography.net/Portfolio"><img style="padding: 25px;" src="StaticMaps.png"></a>
@@ -154,5 +201,6 @@ body{
 		</div>
 	</div>
 </div>
+
 </div>
 </body>
